# nuff-mdverter

./: CMakeLists.txt  CommandsParser.cpp  CommandsParser.h  FileOutput.cpp  FileOutput.h  README.md  REAME.md  StandardTerminalOutput.cpp  StandardTerminalOutput.h  main.cpp  test.md
IOfiles/: InputInterface.h  OutputInterface.h  StandardTerminalOutput.h
IOfiles/src/: FileOutput.cpp  StandardTerminalOutput.cpp
parsers/: BoldParser.cpp  BoldParser.h  LineParserInterface.h
tokens/: BoldToken.cpp  BoldToken.h  TokenInterface.h
